# findany

./: README.md
.github/workflows/: build-and-test.yml  build.yml  findany.yml  publish.yml  test.yml  workflow.yml
publish/npm/: package.json
publish/pip/: pyproject.toml
src/: findany.c
test/: test.py
test/cases/combine_arguments/: in_full_forms.yml  iovs.yml  oiv.yml  si_with_std_in_and_out.yml  svso.yml
test/cases/find_case_insensitive/: when_input_has_capitalized_letters.yml  when_substring_has_capitalized_letters.yml
test/cases/find_in_unicode/: when_substrings_and_input_contain_unicode_chars.yml
test/cases/find_inverted/: when_keyword_at_end.yml  when_keyword_at_start.yml  when_keyword_in_middle.yml
test/cases/find_keyword/: when_keyword_at_end.yml  when_keyword_at_end_with_lf.yml  when_keyword_at_start.yml  when_keyword_in_middle.yml
test/cases/find_keyword_in_list_of_keywords/: when_keyword_at_end.yml  when_keyword_at_start.yml
test/cases/find_multiple_substrings/: when_two_same_substrings.yml  when_two_substrings.yml  when_two_substrings_and_line_contains_both.yml  when_two_substrings_and_one_of_them_is_prefix_of_other.yml  when_two_substrings_with_same_prefix.yml
test/cases/find_substring/: when_extra_symbols_in_substring.yml  when_substring_at_end.yml  when_substring_at_start.yml  when_substring_in_middle.yml  when_substring_in_wrong_case.yml  when_substring_nowhere.yml
test/cases/find_substring_from_arg/: when_multiple_substrings.yml  when_single_substring.yml
test/cases/print_match/: when_case_insensitive_search.yml  (+1 more)
(+3 files in other folders)
