[project]
name = "findany-beta"
version = "1.1.2"
authors = [
  {name="Igor Belousov", email="imbelousov66@gmail.com"}
]
description = "A command line tool for searching multiple substrings in a multiline text file"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: C",
  "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
urls = { 
  Homepage = "https://github.com/imbelousov/findany",
  Repository = "https://github.com/imbelousov/findany",
  Issues = "https://github.com/imbelousov/findany/issues"
}
scripts = {
  findany = "findany.cli:main"
}

[tool]
setuptools = {
  include-package-data = true,
  package-data = {
    findany = ["bin/*"]
  }
}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
